chore: Adjusting folder structure

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -1,9 +1,10 @@
 - name: Overview
   href: xref:Uno.Extensions.Overview
-- name: "How-To: Getting Started"
-  href: xref:Uno.Extensions.HowToGettingStarted
-- name: Learn
   items:
+    - name: Uno.Extensions Overview
+      href: xref:Uno.Extensions.Overview
+    - name: "How-To: Getting Started"
+      href: xref:Uno.Extensions.HowToGettingStarted
     - name: Hosting
       href: xref:Uno.Extensions.Hosting.Overview
       items:
