--- a/testing/TestHarness/Directory.Build.props
+++ b/testing/TestHarness/Directory.Build.props
@@ -11,7 +11,7 @@
 			<ConditionalCompilationSymbol Name="UNO_EXT_TIMERS" Comment="Controls whether performance timers are enabled (off by default)" />
 		</ConditionalCompilationSymbols>
 
-		
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 		<!--<DefineConstants>$(DefineConstants);UNO_EXT_TIMERS</DefineConstants>-->
 	</PropertyGroup>
 
@@ -25,25 +25,25 @@
 
 	<PropertyGroup>
 		<IsMonoAndroid>false</IsMonoAndroid>
-		<IsMonoAndroid Condition="'$(TargetFramework)'=='net7.0-android' or $(TargetFramework.ToLower().StartsWith('monoandroid'))">true</IsMonoAndroid>
+		<IsMonoAndroid Condition="'$(TargetFramework)'=='net8.0-android' or $(TargetFramework.ToLower().StartsWith('monoandroid'))">true</IsMonoAndroid>
 
 		<IsXamarinIOS>false</IsXamarinIOS>
-		<IsXamarinIOS Condition="'$(TargetFramework)'=='net7.0-ios' or '$(TargetFramework)'=='net7.0-maccatalyst' or $(TargetFramework.ToLower().StartsWith('xamarinios'))">true</IsXamarinIOS>
+		<IsXamarinIOS Condition="'$(TargetFramework)'=='net8.0-ios' or '$(TargetFramework)'=='net8.0-maccatalyst' or $(TargetFramework.ToLower().StartsWith('xamarinios'))">true</IsXamarinIOS>
 
 		<IsXamarinMac>false</IsXamarinMac>
-		<IsXamarinMac Condition="$(TargetFramework.ToLower().StartsWith('xamarinmac')) or '$(TargetFramework)'=='net7.0-macos'">true</IsXamarinMac>
+		<IsXamarinMac Condition="$(TargetFramework.ToLower().StartsWith('xamarinmac')) or '$(TargetFramework)'=='net8.0-macos'">true</IsXamarinMac>
 
 		<_IsAndroid>false</_IsAndroid>
-		<_IsAndroid Condition="$(IsMonoAndroid) or '$(TargetFramework)'=='net7.0-android'">true</_IsAndroid>
+		<_IsAndroid Condition="$(IsMonoAndroid) or '$(TargetFramework)'=='net8.0-android'">true</_IsAndroid>
 
 		<_IsCatalyst>false</_IsCatalyst>
-		<_IsCatalyst Condition="$(_IsCatalyst) or '$(TargetFramework)'=='net7.0-maccatalyst'">true</_IsCatalyst>
+		<_IsCatalyst Condition="$(_IsCatalyst) or '$(TargetFramework)'=='net8.0-maccatalyst'">true</_IsCatalyst>
 
 		<_IsIOS>false</_IsIOS>
-		<_IsIOS Condition="$(IsXamarinIOS) or '$(TargetFramework)'=='net7.0-ios' or '$(TargetFramework)'=='net7.0-maccatalyst'">true</_IsIOS>
+		<_IsIOS Condition="$(IsXamarinIOS) or '$(TargetFramework)'=='net8.0-ios' or '$(TargetFramework)'=='net8.0-maccatalyst'">true</_IsIOS>
 
 		<_IsMacOS>false</_IsMacOS>
-		<_IsMacOS Condition="'$(TargetFramework)'=='net7.0-macos'">true</_IsMacOS>
+		<_IsMacOS Condition="'$(TargetFramework)'=='net8.0-macos'">true</_IsMacOS>
 
 		<_IsNet>false</_IsNet>
 		<_IsNet Condition="'$(TargetFramework)'=='net461'">true</_IsNet>
@@ -52,7 +52,7 @@
 		<_IsNetCore Condition="'$(TargetFramework)'=='net5.0'">true</_IsNetCore>
 
 		<_IsNetStd>false</_IsNetStd>
-		<_IsNetStd Condition="'$(TargetFramework)'=='net7.0' or $(_IsNetCore)">true</_IsNetStd>
+		<_IsNetStd Condition="'$(TargetFramework)'=='net8.0' or $(_IsNetCore)">true</_IsNetStd>
 
 		<_IsUWP>false</_IsUWP>
 		<_IsUWP Condition="$(TargetFramework.StartsWith('uap'))">true</_IsUWP>
@@ -66,5 +66,54 @@
 		<MtouchExtraArgs>$(MtouchExtraArgs) --registrar=static</MtouchExtraArgs>
 	</PropertyGroup>
 	
+ <Choose>
+   <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
+     <PropertyGroup>
+       <IsAndroid>true</IsAndroid>
+       <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
+     </PropertyGroup>
+   </When>
+   <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
+     <PropertyGroup>
+       <IsIOS>true</IsIOS>
+       <SupportedOSPlatformVersion>14.2</SupportedOSPlatformVersion>
+     </PropertyGroup>
+
+     <!--
+     Eagerly define capabilities for iOS to avoid VS 2022 to ask for
+     project reload, and ninitialize the debugger toolbar faster.
+     See https://github.com/unoplatform/uno/issues/14303.
+     -->
+     <ItemGroup>
+       <ProjectCapability Include="XamarinStaticLaunchProfiles" />
+       <ProjectCapability Include="Maui" />
+       <ProjectCapability Include="MauiCore" />
+     </ItemGroup>
+   </When>
+   <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'macos'">
+     <PropertyGroup>
+       <IsMac>true</IsMac>
+       <SupportedOSPlatformVersion>10.14</SupportedOSPlatformVersion>
+     </PropertyGroup>
+   </When>
+   <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
+     <PropertyGroup>
+       <IsMacCatalyst>true</IsMacCatalyst>
+       <SupportedOSPlatformVersion>14.0</SupportedOSPlatformVersion>
+     </PropertyGroup>
+   </When>
+   <When Condition="$(TargetFramework.Contains('windows10'))">
+     <PropertyGroup>
+       <UseRidGraph>true</UseRidGraph>
+       <IsWinAppSdk>true</IsWinAppSdk>
+       <SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
+       <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
+       <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+       <EnableCoreMrtTooling Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</EnableCoreMrtTooling>
+     </PropertyGroup>
+   </When>
+ </Choose>
+
+
 	<Import Project="$(MSBuildThisFileDirectory)..\..\src\crosstargeting_override.props" Condition="exists('$(MSBuildThisFileDirectory)..\..\src\crosstargeting_override.props')" />
 </Project>
