--- a/testing/TestHarness/TestHarness.Skia.Linux.FrameBuffer/TestHarness.Skia.Linux.FrameBuffer.csproj
+++ b/testing/TestHarness/TestHarness.Skia.Linux.FrameBuffer/TestHarness.Skia.Linux.FrameBuffer.csproj
@@ -14,6 +14,7 @@
     <UpToDateCheckInput Include="..\TestHarness.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
     <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" />
