chore: allow loading Uno.Extensions.sln into VS Code / DevKit

--- a/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Skia.Wpf/Uno.Extensions.RuntimeTests.Skia.Wpf.csproj
+++ b/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Skia.Wpf/Uno.Extensions.RuntimeTests.Skia.Wpf.csproj
@@ -6,6 +6,7 @@
 		<UseWPF>true</UseWPF>
 		<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
 		<DefineConstants>$(DefineConstants);WINDOWS_WINUI</DefineConstants>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 
 		<!--Avoids conflicts with Uno namespace-->
 		<RootNamespace>RuntimeTests</RootNamespace>
