--- a/samples/MauiEmbedding/MauiEmbedding.Windows/MauiEmbedding.Windows.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.Windows/MauiEmbedding.Windows.csproj
@@ -9,8 +9,8 @@
 		<RootNamespace>MauiEmbedding.Windows</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<Platforms>x86;x64;arm64</Platforms>
-		<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
-		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
+		<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+		<PublishProfile>win-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
 		<!-- Uncomment for Unpackaged builds -->
