ci: Fixing net8 build
+semver:major

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -123,6 +123,7 @@
 
 	<PropertyGroup Condition="$(_IsWinUI)">
 		<DefineConstants>$(DefineConstants);__WINDOWS__</DefineConstants>
+		<UseRidGraph>true</UseRidGraph>
 	</PropertyGroup>
 
 	<PropertyGroup>
