--- a/samples/Playground/Playground.Windows/Playground.Windows.csproj
+++ b/samples/Playground/Playground.Windows/Playground.Windows.csproj
@@ -9,7 +9,7 @@
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
-
+		<UseRidGraph>true</UseRidGraph>
     <!-- Bundles the WinAppSDK binaries -->
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 
