--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -123,6 +123,7 @@
 
 	<PropertyGroup Condition="$(_IsWinUI)">
 		<DefineConstants>$(DefineConstants);__WINDOWS__</DefineConstants>
+		<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
 	</PropertyGroup>
 
 	<PropertyGroup>
