--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -48,6 +48,7 @@
 		<When Condition="$(TargetFramework.Contains('windows10'))">
 			<PropertyGroup>
 				<IsWinAppSdk>true</IsWinAppSdk>
+				<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
 				<SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
 			</PropertyGroup>
