--- a/src/Uno.Extensions.Core.Generators/buildTransitive/Uno.Extensions.Core.props
+++ b/src/Uno.Extensions.Core.Generators/buildTransitive/Uno.Extensions.Core.props
@@ -4,6 +4,7 @@
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableDynamicallyAccessedMembersAttribute" />
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableMaybeNullAttribute" />
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableMaybeNullWhenAttribute" />
+		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableMemberNotNullAttribute" />
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableMemberNotNullWhenAttribute" />
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableNotNullIfNotNullAttribute" />
 		<CompilerVisibleProperty Include="UnoExtensionsGeneration_DisableNotNullWhenAttribute" />
