--- a/src/Uno.Extensions.Navigation.UI/common.props
+++ b/src/Uno.Extensions.Navigation.UI/common.props
@@ -11,6 +11,7 @@
 
 
 	<ItemGroup>
+		<ProjectReference Include="..\Uno.Extensions.Configuration\Uno.Extensions.Configuration.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Navigation\Uno.Extensions.Navigation.csproj" />
 	</ItemGroup>
 
@@ -19,6 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" />
 	</ItemGroup>
 
