feat: Adding back button support
(cherry picked from commit fd4dc2ec739329aabe507fcdca0417e987afae10)

--- a/samples/Playground/Playground/appsettings.json
+++ b/samples/Playground/Playground/appsettings.json
@@ -8,5 +8,8 @@
   },
   "LocalizationConfiguration": {
     "Cultures": [ "en", "es", "fr" ]
+  },
+  "NavigationConfiguration": {
+    //"UseNativeBackButton": false
   }
 }
