--- a/doc/Learn/Mvux/toc.yml
+++ b/doc/Learn/Mvux/toc.yml
@@ -1,7 +1,7 @@
 
 - name: Overview
   href: xref:Uno.Extensions.Mvux.Overview
-- name: "How-To: Get started with Mvux"
+- name: "How-To: Get started with MVUX"
   href: xref:Uno.Extensions.Mvux.HowToMvuxProject
 - name: Feeds
   href: xref:Uno.Extensions.Mvux.Feeds
