--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -17,9 +17,9 @@
 		<PackageVersion Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
 		<PackageVersion Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.8.5" />
-		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.4.231219000" />
+		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.4.240211001" />
 		<PackageVersion Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
-		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
 		<PackageVersion Include="Refit" Version="6.3.2" />
 		<PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
 		<PackageVersion Include="SkiaSharp" Version="2.88.3" />
@@ -75,4 +75,7 @@
 		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
 		<PackageVersion Include="Xamarin.UITest" Version="4.1.2" />
 	</ItemGroup>
+
+
+	<Import Project="../../src/winappsdk-workaround.targets" Condition="exists('../../src/winappsdk-workaround.targets')" />
 </Project>
