--- a/src/Uno.Extensions.Reactive.Generator/Uno.Extensions.Reactive.Generator.csproj
+++ b/src/Uno.Extensions.Reactive.Generator/Uno.Extensions.Reactive.Generator.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<ImplicitUsings>false</ImplicitUsings>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 
 		<!--
 			Defines that this project output is a tool of the given package ID,
