--- a/src/Uno.Extensions.Navigation.Generators/Uno.Extensions.Navigation.Generators.csproj
+++ b/src/Uno.Extensions.Navigation.Generators/Uno.Extensions.Navigation.Generators.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 
 		<!--
 			Defines that this project output is a tool of the given package ID,
