--- a/samples/Playground/Directory.Build.props
+++ b/samples/Playground/Directory.Build.props
@@ -11,6 +11,7 @@
 	<PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<LangVersion>latest</LangVersion>
 
     <DebugType>portable</DebugType>
     <DebugSymbols>True</DebugSymbols>
