--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -41,8 +41,8 @@
 		<PackageVersion Include="Uno.Core" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
-		<PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.2.0-dev.58" />
-		<PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.2.0-dev.58" />
+		<PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.2.0" />
+		<PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.2.0" />
 		<PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
 		<PackageVersion Include="Uno.Toolkit" Version="5.0.15" />
 		<PackageVersion Include="Uno.Toolkit.UI" Version="5.0.15" />
@@ -53,7 +53,7 @@
 		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="5.0.19" />
 		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.24.0-dev.95" />
 		<PackageVersion Include="Uno.WinUI" Version="5.0.19" />
-		<PackageVersion Include="Uno.WinUI.Markup" Version="5.2.0-dev.58" />
+		<PackageVersion Include="Uno.WinUI.Markup" Version="5.2.0" />
 		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.0.19" />
 		<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="5.0.19" />
 		<PackageVersion Include="coverlet.collector" Version="3.1.2" />
