fix: fixing issue with error on WinUI due to Win2D graphics
(cherry picked from commit ac7b6c99c8c14d1b4d8ebe9e2428be279263a214)

--- a/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
+++ b/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Uno.WinUI" />
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="Microsoft.Graphics.Win2D" Condition="$(TargetFramework.Contains('-windows10'))" />
 	</ItemGroup>
 
 	<ItemGroup>
