--- a/src/Uno.Extensions.Toolkit.UI/Uno.Extensions.Toolkit.WinUI.csproj
+++ b/src/Uno.Extensions.Toolkit.UI/Uno.Extensions.Toolkit.WinUI.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
 	<Import Project="..\tfms-ui-winui.props" />
 
 	<PropertyGroup>
 		<Description>Toolkit Extensions for the Uno Platform (WinUI)</Description>
 	</PropertyGroup>
-	
+
 	<PropertyGroup>
 		<PackageId>Uno.Extensions.Toolkit.WinUI</PackageId>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
