--- a/src/Uno.Extensions.Navigation.UI/Uno.Extensions.Navigation.WinUI.csproj
+++ b/src/Uno.Extensions.Navigation.UI/Uno.Extensions.Navigation.WinUI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
 	<Import Project="..\tfms-ui-winui.props" />
 
 	<PropertyGroup>
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<Import Project="common.props" />
-	
+
 	<PropertyGroup>
 		<PackageId>Uno.Extensions.Navigation.WinUI</PackageId>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
