docs: add upgrading docs and itemspanel braking changes

--- a/doc/Learn/Markup/toc.yml
+++ b/doc/Learn/Markup/toc.yml
@@ -2,6 +2,8 @@
 
 - name: Overview
   href: xref:Uno.Extensions.Markup.Overview
+- name: Upgrading
+  href: xref:Uno.Extensions.Markup.Upgrading
 - name: Binding, Static & Theme Resources
   href: xref:Uno.Extensions.Markup.DependencyPropertyBuilder
   items:
