--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -5,6 +5,8 @@
       href: xref:Uno.Extensions.Overview
     - name: "How-To: Getting Started"
       href: xref:Uno.Extensions.HowToGettingStarted
+      name: "How-To: Getting Started with Tests"
+      href: xref:Uno.Extensions.GettingStartedTests
     - name: Authentication
       href: Learn/Authentication/toc.yml
       topicHref: xref:Uno.Extensions.Authentication.Overview
