docs: Fix toc file
(cherry picked from commit efec7f6c22969107aad6e8a8aa74383203ec7f1b)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -5,7 +5,7 @@
       href: xref:Uno.Extensions.Overview
     - name: "How-To: Getting Started"
       href: xref:Uno.Extensions.HowToGettingStarted
-      name: "How-To: Getting Started with Tests"
+    - name: "How-To: Getting Started with Tests"
       href: xref:Uno.Extensions.GettingStartedTests
     - name: Authentication
       href: Learn/Authentication/toc.yml
