chore: Revert "docs: Remove How-To: Getting Started and its references"
This reverts commit 7362080df46a2221dd2bc4058ffa60ea5677d989.

(cherry picked from commit 8fa14a511f5ad0562aa71f95d4968844fbf6ef7e)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -3,6 +3,8 @@
   items:
     - name: Uno.Extensions Overview
       href: xref:Uno.Extensions.Overview
+    - name: "How-To: Getting Started"
+      href: xref:Uno.Extensions.HowToGettingStarted
     - name: Authentication
       href: Learn/Authentication/toc.yml
       topicHref: xref:Uno.Extensions.Authentication.Overview
