docs: Fix Uno.Extensions Storage documentation links and adjust content

--- a/doc/Learn/Storage/toc.yml
+++ b/doc/Learn/Storage/toc.yml
@@ -1,4 +1,4 @@
 - name: Overview
-  href: xref:Uno.Extensions.Serialization.Overview
-- name: "How-To: Get started with serialization"
-  href: xref:Uno.Extensions.Serialization.HowToSerialization
+  href: xref:Uno.Extensions.Storage.Overview
+- name: "How-To: Add Required Entitlements"
+  href: xref:Uno.Extensions.Storage.HowToRequiredEntitlements
