docs: Updated toc
(cherry picked from commit a2508af317875033ca00a65646cd36f8e46b2ae0)

--- a/doc/Learn/Markup/toc.yml
+++ b/doc/Learn/Markup/toc.yml
@@ -17,6 +17,8 @@
       href: xref:Uno.Extensions.Markup.UnoThemes
 - name: Attached Properties
   href: xref:Uno.Extensions.Markup.AttachedProperties
+- name: Source and Relative Source
+  href: xref:Uno.Extensions.Markup.SourceUsage
 - name: Resource Dictionaries
   href: xref:Uno.Extensions.Markup.Resources
 - name: Styles
