chore: Limit dependencies on MSAL to supported platforms
(cherry picked from commit 14979905a3a4c35a2f72a546d3471ffa32da6bb9)

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -50,10 +50,8 @@
 
 	<ItemGroup >
 		<PackageReference Include="Uno.WinUI" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Uno.WinUI.MSAL" />
+		<!-- MSAL isn't supported on skia targets, macos or maccatalyst -->
+		<PackageReference Include="Uno.WinUI.MSAL" Condition="'$(IsMSALSupported)'=='true'" />
 	</ItemGroup>
 
 	<ItemGroup>
