--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.csproj
@@ -29,7 +29,7 @@
 		<TargetPlatformMinVersion>14.2</TargetPlatformMinVersion>
 		<TargetPlatformVersion>15.4</TargetPlatformVersion>
 	</PropertyGroup>
-	
+
 	<Import Project="common.props" />
 
 	<PropertyGroup>
@@ -38,7 +38,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.UI" />
-		<PackageReference Include="Uno.UI.MSAL" />
+		<!-- MSAL isn't supported on skia targets, macos or maccatalyst -->
+		<PackageReference Include="Uno.UI.MSAL" Condition="'$(IsMSALSupported)'=='true'" />
 	</ItemGroup>
 
 	<ItemGroup>
