--- a/testing/TestHarness/TestHarness.Legacy.Skia.WPF/TestHarness.Legacy.Skia.WPF.csproj
+++ b/testing/TestHarness/TestHarness.Legacy.Skia.WPF/TestHarness.Legacy.Skia.WPF.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net8.0-windows</TargetFramework>
 		<AssemblyName>TestHarnessApp</AssemblyName>
 		<UnoExtensionsGeneration_DisableNotNullIfNotNullAttribute>true</UnoExtensionsGeneration_DisableNotNullIfNotNullAttribute>
 	</PropertyGroup>
@@ -11,7 +11,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="IdentityModel.OidcClient" />
 		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" />
-		<PackageReference Include="Microsoft.Identity.Client" />
+		<!--<PackageReference Include="Microsoft.Identity.Client" />-->
 		<PackageReference Include="Uno.UI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
@@ -22,7 +22,7 @@
 		<PackageReference Include="Uno.Material" />
 		<PackageReference Include="Uno.Toolkit.UI.Material" />
 		<PackageReference Include="Uno.Toolkit.UI" />
-		<PackageReference Include="Uno.UI.MSAL" />
+		<!--<PackageReference Include="Uno.UI.MSAL" />-->
 		<PackageReference Include="SkiaSharp.HarfBuzz" />
 		<PackageReference Include="SkiaSharp.Views.WPF" />
 		<PackageReference Include="SkiaSharp.Skottie" />
