docs: use theme service

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -47,6 +47,9 @@
 - name: .NET MAUI Embedding
   href: Learn/Maui/toc.yml
   topicHref: xref:Uno.Extensions.Maui.Overview
+- name: Theme Service
+  href: Learn/ThemeService/toc.yml
+  topicHref: xref:Uno.Extensions.ThemeService.Overview
 - name: Reference
   items:
     - name: MVUX
