docs: Update existing reference navigation docs
(cherry picked from commit f896dd05c521da721b62d97d95bbcf2e32281a0a)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -72,20 +72,16 @@
           href: Reference/Reactive/Architecture.md
         - name: Analysis rules
           href: Reference/Reactive/rules.md
-    # - name: Navigation
-    #   href: Reference/Navigation/Navigation.md
-    #   items:
-    #     - name: Design
-    #       href: Reference/Navigation/Design.md
-    #     - name: Navigation Region
-    #       href: Reference/Navigation/NavigationRegion.md
-    #     - name: Qualifiers
-    #       href: Reference/Navigation/Qualifiers.md
-    #     - name: View Map
-    #       href: Reference/Navigation/ViewMap.md
-    #     - name: Route Map
-    #       href: Reference/Navigation/RouteMap.md
-    #     - name: Implement INavigator
-    #       href: Reference/Navigation/Navigator.md
-    #     - name: Implement IRequestHandler
-    #       href: Reference/Navigation/NavigationRequestHandler.md
+    - name: Navigation
+      href: xref:Reference.Navigation.Overview
+      items:
+        - name: Design
+          href: xref:Reference.Navigation.Design
+        - name: Navigation Region
+          href: xref:Reference.Navigation.Regions
+        - name: Qualifiers
+          href: xref:Reference.Navigation.Qualifiers
+        - name: INavigator
+          href: xref:Reference.Navigation.Navigator
+        - name: Implement IRequestHandler
+          href: xref:Reference.Navigation.RequestHandler
